Add back to search link to results not found partial. Fix problem with validation in search bar (search igdb). Optimize quest.js.erb partial.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -271,6 +271,7 @@ div#search-results.mask2:after {
         color: #999;
         border-top: thin solid #bababa;
         padding-top: 10px;
+        margin-bottom: 0px;
     }
 
     a:hover {
