--- a/app/views/search/_no_results.html.erb
+++ b/app/views/search/_no_results.html.erb
@@ -1,4 +1,5 @@
 <div id="no-results">
 NO RESULTS FOUND
 <p>Try something else or use * wildcard</p>
+<%= link_to (svg 'back'), search_url, class: 'uk-icon', remote: true %>
 </div>
