--- a/app/views/static_pages/_quest.js.erb
+++ b/app/views/static_pages/_quest.js.erb
@@ -1,20 +1,19 @@
-var no_errors = <%= !@inquiry.errors.any? %>;
-var search_type = '<%= @inquiry.query_type %>';
-var view = '<%= view %>';
-
 $("#search-errors").replaceWith("<%= j(render partial: 'search_errors', locals: { errors: @inquiry.errors }) %>");
 $('#search-igdb-bar').on('input', function() {
     $("#search-errors").replaceWith("<%= j(render partial: 'search_errors', locals: { errors: [] }) %>");
 });
 
+clearSearchWait();
 cleanOffcanvas();
 
-if (no_errors) {
+<% if @inquiry.errors.empty? %>
+
+    var view = '<%= view %>';
+
     $("#search-results").html("<%= j(render partial:'results', locals: { view: view }) %>");
     $("#search-results").append("<%= j(content_tag :span, @inquiry.last_form.values.join(','), id: 'last-form') %>");
     $("#bar-history").html("<%= j(render partial:'records/bar_records') %>");
     activateSearchRecords();
-
 
     switch (view) {
         case 'list_view':
@@ -29,13 +28,12 @@ if (no_errors) {
             $('.g-drop').slideUp(0);
             break;
     }
-}
 
-$(function() {
-    activateSearchToolbar(view, search_type);
-    changeSearchView();
-    showHideToolbar(false);
-    clearSearchWait();
-    changeTheme(false);
-    hideShowBackToTop();
-});
+    $(function() {
+        activateSearchToolbar(view, '<%= @inquiry.query_type %>');
+        changeSearchView();
+        showHideToolbar(false);
+        changeTheme(false);
+        hideShowBackToTop();
+    });
+<% end %>
