--- a/app/views/collections/_error.js.erb
+++ b/app/views/collections/_error.js.erb
@@ -1,9 +1,10 @@
 $("#coll-icon-input").replaceWith("<%= j(render partial: 'warning', locals: { error: @error }) %>");
 
 $('#collection_name').on('input', function() {
+    var $icon = $('#coll-icon-input');
 
-    if ($('#coll-icon-input').hasClass('warning-icon')) {
-        $("#coll-icon-input").replaceWith("<span id='coll-icon-input'><%= j(svg 'label') %></span>");
+    if ($icon.hasClass('warning-icon')) {
+        $icon.replaceWith("<span id='coll-icon-input'><%= j(svg 'label') %></span>");
     }
 
 });
