--- a/app/views/shares/update.js.erb
+++ b/app/views/shares/update.js.erb
@@ -1,4 +1,4 @@
 var share_id = '<%= @share.id %>';
 $('#' + 'share-' + share_id).replaceWith("<%= j(render @share) %>");
 copyShareLinks()
-disableEnableForm(false, 'share-form');
+activateEditShLink();
