--- a/app/assets/stylesheets/shares.scss
+++ b/app/assets/stylesheets/shares.scss
@@ -1,24 +1,9 @@
-div.share {
-    border: thin solid #bababa;
-    border-radius: 5px;
-    padding: 10px;
-}
-
-.sh_form {
-    margin: 10px 0px;
+.sh_form, .sh_edit_form {
+    margin: 10px 0px 0px;
 }
 
 #share-form {
     position: relative;
-}
-
-#share-form.disabled::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #ecececb5;
-    z-index: 1;
 }
 
 #f-modal p.header {
@@ -37,7 +22,7 @@ p.discription {
 }
 
 .part {
-    margin-bottom: 10px;
+    margin: 10px 0px;
 
     span {
         font-size: 16px;
@@ -172,4 +157,153 @@ input.sh-check:checked:focus, input.sh-check:indeterminate:focus {
 .sh-warning {
     top: 5px;
     left: 3px;
+}
+
+span.no-sh {
+    color: #999;
+    font-size: 14px;
+    font-style: italic;
+}
+
+div.share {
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 20px;
+
+    &:last-child {
+        margin-bottom: 0px;
+    }
+}
+
+input.share-link {
+    font-size: 14px;
+    background: none;
+    width: 100%;
+    border: none;
+    color: #666;
+    padding-left: 26px;
+}
+
+.world-icon {
+    color: #666;
+}
+
+table.share-toolbar {
+    margin-bottom: 10px;
+    border-spacing: 0px 0px;
+    width: 100%;
+
+    td {
+        border: thin solid #afafaf;
+        border-right: none;
+        background: #e3e3e3;
+    }
+
+    td.link {
+        padding: 10px;
+        overflow: hidden;
+    }
+
+    td.btn {
+        transition:background-color 0.1s ease-in-out;
+    }
+
+    td.btn:hover {
+        background-color: #d4d4d4;
+        cursor: pointer;
+    }
+
+    td.btn.disabled {
+        background-color: #d4d4d4;
+        pointer-events: none;
+        cursor: default;
+        a {
+           pointer-events: none;
+           cursor: default;
+           color: #999;
+        }
+    }
+
+    td a {
+        color: #666;
+        display: block;
+        padding: 10px;
+        transition:color 0.1s ease-in-out;
+    }
+
+    td a:hover {
+        text-decoration: none;
+        color: #333;
+    }
+
+    td:first-child {
+        border-radius: 5px 0px 0px 5px;
+    }
+
+    td:last-child {
+        border-radius: 0px 5px 5px 0px;
+        border-right: thin solid #afafaf;
+    }
+}
+
+div.share-info {
+    font-size: 14px;
+    color: #666;
+    border: thin solid #afafaf;
+    border-radius: 5px;
+}
+
+.sh-done {
+    padding: 10px 10px 0px 36px;
+    margin: 0px;
+}
+
+.sh-shared-box {
+    position: relative;
+    padding: 10px;
+    border-left: thin solid #afafaf;
+    height: 100%;
+}
+
+.share-info .uk-grid > div:last-child {
+    overflow: hidden;
+}
+
+.sh-box-title {
+    @extend .sh-check-title;
+    line-height: unset;
+}
+
+.sh-coll-shared {
+    margin: 0px;
+    padding-top: 10px;
+
+    span {
+        font-style: italic;
+        &:after {
+            content: ', ';
+        }
+    }
+
+    span:last-child:after {
+        content: '';
+    }
+}
+
+table.sh-time-info {
+    margin-top: 15px;
+    padding-left: 5px;
+    font-size: 12px;
+    line-height: 16px;
+}
+
+.cp-share-link {
+    width: 34px;
+}
+
+.cp-share-link.copied {
+    color: $dark_accent;
+    &:hover {
+        color: $dark_accent;
+    }
 }
