--- a/app/views/shares/update.js.erb
+++ b/app/views/shares/update.js.erb
@@ -2,3 +2,4 @@ var share_id = '<%= @share.id %>';
 $('#' + 'share-' + share_id).replaceWith("<%= j(render @share) %>");
 copyShareLinks()
 activateEditShLink();
+convertTimeToLocal('.time');
