--- a/app/views/layouts/_sh_navigation.html.erb
+++ b/app/views/layouts/_sh_navigation.html.erb
@@ -1,5 +1,31 @@
-<%= content_tag :div, class: 'shared-logo' do %>
-<p>still have them</p>
-<p>SHARED</p>
+<% if guest_logged? && guest.title_or_message? %>
+  <%= content_tag :div, class: 'shared-logo with-title uk-grid-small uk-flex-nowrap', 'uk-grid' => '' do %>
+    <div>
+      <p>still have them</p>
+      <p class="shared">SHARED</p>
+    </div>
+    <div class="uk-text-truncate">
+
+
+
+      <%= content_tag :span, guest.title, class: "title #{ 'only_title' if guest.message.empty? }" %>
+
+
+
+
+      <% unless guest.message.empty? %>
+        <%= content_tag :a, class: 'message uk-text-truncate', 'uk-toggle' => 'target: #message-modal' do %>
+          <%= content_tag :span, nil, 'uk-icon' => 'comment' %>
+          <%= guest.message %>
+        <% end %>
+      <% end %>
+    </div>
+  <% end %>
+<% else %>
+  <%= content_tag :div, class: 'shared-logo' do %>
+    <p>still have them</p>
+    <p class="shared">SHARED</p>
+  <% end %>
 <% end %>
+
 <%= link_to('', logout_guest_url, id: 'logout', class: 'nav-icon', method: :delete, 'uk-icon': 'sign-out', 'uk-tooltip' => 'title: Leave; pos: left') if guest_logged? %>
