--- a/app/views/layouts/shared.html.erb
+++ b/app/views/layouts/shared.html.erb
@@ -13,17 +13,6 @@
   <body>
     <% if guest_logged? && !shared_collections.empty? %>
       <%= render 'layouts/sh_menu' %>
-
-
-      <div id="message-modal" uk-modal>
-          <div class="uk-modal-dialog uk-modal-body uk-margin-auto-vertical">
-              <button class="uk-modal-close-default" type="button" uk-close></button>
-              <div class="modal-content">
-                  <%= guest.message %>
-              </div>
-          </div>
-      </div>
-
     <% end %>
     <div class="main-container">
       <%= render 'layouts/sh_navigation' %>
@@ -39,9 +28,7 @@
       </div>
       <%= render 'layouts/footer' %>
     </div>
-
-
-
+    <%= render 'layouts/sh_message' if guest_logged? && !guest.message.empty?%>
     <div id="f-modal" uk-modal>
         <div class="uk-modal-dialog uk-modal-body">
             <button class="uk-modal-close-default" type="button" uk-close></button>
