--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,6 @@
       </div>
     <%= render 'layouts/footer' %>
     </div>
-    <div id="f-modal" uk-modal>
-        <div class="uk-modal-dialog uk-modal-body">
-            <button class="uk-modal-close-default" type="button" uk-close></button>
-            <div class="modal-content">
-                <span class="loading">Loading</span>
-            </div>
-        </div>
-    </div>
+    <%= render 'layouts/modals' %>
   </body>
 </html>
