--- a/app/views/collections/destroy.js.erb
+++ b/app/views/collections/destroy.js.erb
@@ -1,3 +1,5 @@
+// $('.uk-modal:not([id])').remove();
+
 var ids = [];
 $('li[id^=mc-]').each(function(){ ids.push(this.id)});
 var index = ids.indexOf('mc-<%= @collection.id %>');
