Create settings action and route. Create platforms controller. Create settings modal.

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
   <ul>
-    <li><%= link_to "TERMS", terms_url, class: "about-link" %></li>
-    <li><%= link_to "PRIVACY", privacy_url, class: "about-link" %></li>
+    <li><%= link_to "TERMS", root_url, class: "about-link" %></li>
+    <li><%= link_to "PRIVACY", root_url, class: "about-link" %></li>
   </ul>
 </footer>
