--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,6 +56,7 @@ $disabled: #b4b4b4;
 @import "s_list";
 @import "collections";
 @import "shares";
+@import "settings";
 @import "game_offc";
 
 // NAVIGATION
