--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -45,3 +45,22 @@ table.set-platform {
         border-right: thin solid #afafaf;
     }
 }
+
+a.del-user-btn {
+    margin: auto;
+    margin-bottom: 10px;
+    width: 230px;
+    display: block;
+    padding: 0px;
+
+    span {
+        position: relative;
+        left: -7px;
+    }
+
+    span:last-child {
+        left: 7px;
+    }
+}
+
+
