--- a/app/views/users/_settings.html.erb
+++ b/app/views/users/_settings.html.erb
@@ -8,11 +8,12 @@
 
 <p class="discription">List of platforms lets you filter your games. You obtain a platform by adding a game to a collection that requires such information. You can delete unwanted platforms below. Deleting platform will not delete your games for this platform, will only disable filter option for this platform.</p>
 <%= render 'platforms/platforms' %>
-
 <div class="strike part"><span>Other:</span></div>
 
 <div class="strike part"><span>Remove Account:</span></div>
-
 <p class="discription">Deleting account will remove all your data. If you change your mind, you won't be able to recover it.</p>
-
-<%= link_to 'Delete Account', current_user, method: :delete %>
+<%= link_to current_user, class: 'uk-button sh-button del-user-btn', method: :delete do %>
+<%= content_tag :span, svg('warning') %>
+Delete Account
+<%= content_tag :span, svg('warning') %>
+<% end %>
