--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -63,4 +63,41 @@ a.del-user-btn {
     }
 }
 
+.range-holder {
+    font-size: 14px;
+    margin: auto;
+    text-align: center;
+}
 
+.rng-lab {
+    color: #777;
+    position: relative;
+    top: 6px;
+}
+
+.rng-mima {
+    color: #777;
+    position: relative;
+    top: -2px;
+}
+
+#gpp-counter {
+    font-size: 15px;
+    border: thin solid #afafaf;
+    width: fit-content;
+    padding: 0px 5px;
+    text-align: center;
+    border-radius: 3px;
+    margin: 0px auto;
+}
+
+#gpp-range {
+    width: 200px;
+}
+
+.sh-button.rng-button {
+    font-size: 14px;
+    padding: 0px;
+    line-height: initial;
+    padding: 5px 10px;
+}
