Fix problem: After editing game (changing platform) platforms filter is not updated until "refresh" (exiting collection and entering collection again)

--- a/app/views/games/edit.js.erb
+++ b/app/views/games/edit.js.erb
@@ -49,6 +49,9 @@ if (success) {
         data['page'] = current_page;
     }
 
+    var new_platform = '<%= @new_platform %>';
+    updatePlatformsFilter(new_platform);
+
     var scroll = $(document).scrollTop().valueOf();
 
     $.ajax({
