--- a/app/views/games/create.js.erb
+++ b/app/views/games/create.js.erb
@@ -1,19 +1,18 @@
 var x_id = '<%= @x_id %>';
-var game_id = '<%= @game_igdb_id %>';
 var msg = '<%= @message %>';
 var view = $('#view-container').attr('view');
-var msg_pos = 'top-right';
-var success = <%= @errors.empty? %>;
 
 if (msg) {
     UIkit.notification({
         message: $('<div/>').html(msg).text(),
-        pos: msg_pos,
+        pos: 'top-right',
         timeout: 5000
     });
 }
 
-if (success) {
+<% if @errors.empty? %>
+
+    var game_id = '<%= @game_igdb_id %>';
 
     var uniq_results = x_id === game_id;
 
@@ -51,7 +50,7 @@ if (success) {
         $(this).attr('uk-icon', 'check');
     });
 
-} else {
+<% else %>
 
     var errors = "<%= j(render partial: 'add_form_errors', locals: { errors: @errors }) %>";
 
@@ -66,4 +65,4 @@ if (success) {
             $(element).html(errors);
             resetFormErrors('add', x_id)
     }
-}
+<% end %>
