Add games_per_view column to users table. Add route and action for changing games per view (Users Controller, user settings).

--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -81,7 +81,7 @@ a.del-user-btn {
     top: -2px;
 }
 
-#gpp-counter {
+#gpv-counter {
     font-size: 15px;
     border: thin solid #afafaf;
     width: fit-content;
@@ -91,7 +91,7 @@ a.del-user-btn {
     margin: 0px auto;
 }
 
-#gpp-range {
+#user_gpv {
     width: 200px;
 }
 
