--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1337,16 +1337,16 @@ p.header {
 // Eye (unmask password)
 
 .password + .unmask {
-    width: 40px;
-    height: 50px;
+    width: 35px;
+    height: 35px;
     background: url("eye.svg");
-    background-size: 80% 80%;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     position: absolute;
-    left: 215px;
+    right: 6px;
+    top: 3px;
     border: none;
     cursor: pointer;
-    vertical-align: middle;
     padding: 0px;
 }
 
