--- a/app/views/shares/_form.html.erb
+++ b/app/views/shares/_form.html.erb
@@ -15,8 +15,7 @@
   <% extra = { 'share_id' => @share.id } %>
   <% ic_pref = 'ed-' %>
 <% end %>
-
-<%= f.range_field :w1, :min=>0, :max=>200, :class=>"slide", :id=>"slider1"%>
+<%= form_with model: @share, id: form_id, class: form_class, html: extra do |f| %>
   <div class="uk-child-width-1-2 uk-grid-small uk-grid">
     <div>
       <div class="uk-position-relative uk-margin-small">
