--- a/app/views/users/settings.js.erb
+++ b/app/views/users/settings.js.erb
@@ -1,1 +1,4 @@
-$("#f-modal").find(".modal-content").html("<%= j(render 'settings') %>");
+var $f_modal = $("#f-modal");
+var $f_modal_body = $f_modal.find(".uk-modal-body");
+$f_modal_body.removeClass('fit-content');
+$f_modal.find(".modal-content").html("<%= j(render 'settings') %>");
