Change unnecessary UIkit.util.on(...) to UIkit.util.once(...). Fix problem with blinking list record when entering modal with game info or game edit form.

--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -160,6 +160,10 @@ a.t-trigger {
     }
 }
 
+div.t {
+    transition: background-color 0.01s;
+}
+
 .t-game.hover-fill div.t, .t-game.focus-fill div.t {
     background-color: #c5c5c5;
 }
