--- a/app/assets/stylesheets/s_list.scss
+++ b/app/assets/stylesheets/s_list.scss
@@ -82,6 +82,7 @@ tr.l-addl {
         position: relative;
         background: #d2d2d2;
         padding: 10px 5px 10px 0px;
+        transition: background-color 0.01s;
     }
 
     td:last-child {
