--- a/app/assets/stylesheets/list.scss
+++ b/app/assets/stylesheets/list.scss
@@ -177,7 +177,12 @@ div.t {
     padding-right: 10px;
     border-radius: 0px 3px 3px 0px;
     text-align: right;
-    transition: border 0.3s linear, right 0.3s linear;
+    transition: background-color 0.01s, border 0.3s linear, right 0.3s linear !important;
+
+    a {
+        position: relative;
+        top: -2px;
+    }
 }
 
 .t-menu.out {
