Style gain access to settings. Add errors handling to gain access to settings.

--- a/app/assets/stylesheets/settings.scss
+++ b/app/assets/stylesheets/settings.scss
@@ -191,3 +191,12 @@ table.set-email-pass {
 #change-password {
     padding-right: 44px;
 }
+
+#enter-password {
+    padding-left: 42px;
+}
+
+.set-warning {
+    top: 5px;
+    left: 5px;
+}
