--- a/app/views/layouts/_modals.html.erb
+++ b/app/views/layouts/_modals.html.erb
@@ -12,7 +12,7 @@
 
 <div id="f-modal" uk-modal>
     <div class="uk-modal-dialog uk-modal-body">
-        <button class="uk-modal-close-default" type="button" uk-close></button>
+        <button id="f-modal-close" class="uk-modal-close-default f-modal-close" type="button" uk-close></button>
         <div class="modal-content">
             <span class="loading">Loading</span>
         </div>
