--- a/app/views/users/_access_settings.html.erb
+++ b/app/views/users/_access_settings.html.erb
@@ -1,13 +1,9 @@
-<p class="header set">Gain access to user settings <span uk-icon="icon: unlock; ratio: 1.4"></span></p>
-  <%= form_with(url: settings_url, method: "get") do |f| %>
-    <table class="set-email-pass">
-      <tr>
-      <td class="uk-position-relative">
-        <%= f.password_field :password, id: 'change-password', class: 'uk-input set-input password', placeholder: 'Enter password' %>
-        <%= content_tag :span, svg('key'), id: 'password-icon', class: 'set-input-icon'%>
-      <td class="btn">
-        <%= submit_tag 'Confirm', class: 'set-confirm' %>
-      </td>
-      </tr>
-    </table>
-  <% end %>
+<p class="header set">Enter password to access settings<%= content_tag :span, svg('lock_open') %></p>
+<hr>
+<%= form_with(url: settings_url, method: "get") do |f| %>
+  <div class="uk-position-relative uk-margin">
+    <%= f.password_field :password, id: 'enter-password', class: 'uk-input share-input', placeholder: 'Enter password' %>
+    <%= content_tag :span, svg('key'), id: 'password-icon', class: 'set-input-icon' %>
+  </div>
+  <%= submit_tag 'Confirm', class: 'uk-button sh-button uk-width-1-1' %>
+<% end %>
